# GeniAI

./: .env.example  .gitignore  docker-compose.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260704_0001_create_auth_tables.py  20260705_0002_create_chat_tables.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  gemini_provider.py  provider.py
backend/app/api/: __init__.py  router.py
backend/app/auth/: __init__.py  dependencies.py  google_oauth.py  repository.py  routes.py  schemas.py  service.py
backend/app/chat/: __init__.py  dependencies.py  repository.py  routes.py  schemas.py  service.py
backend/app/core/: __init__.py  config.py  cookies.py  errors.py  security.py
backend/app/db/: base.py  migrations.py  session.py
backend/app/models/: __init__.py  auth_session.py  chat_message.py  chat_session.py  user.py
backend/app/profile/: __init__.py  routes.py  schemas.py  service.py
backend/tests/: test_settings.py
backend/tests/integration/auth/: test_auth_me.py  test_google_callback.py  test_logout.py
backend/tests/integration/chat/: test_chat_routes.py
backend/tests/integration/profile/: test_profile_me.py
backend/tests/unit/ai/: test_gemini_provider.py
backend/tests/unit/auth/: test_auth_service.py  test_google_oauth.py  test_session_security.py
backend/tests/unit/chat/: test_chat_service.py
backend/tests/unit/db/: test_database_url.py  test_session_factory.py
backend/tests/unit/profile/: test_profile_service.py
docs/: auth-layer-prd.md
(+17 files in other folders)
